Disable adding line numbers to pre elements using js (temporary until fixed). Issues: 1. Leads to extra padding on the left with single line code blocks 2. Line numbers added for single line commands split over multiple lines
Disable margin and padding in pre > code and pre > tt elements.
Rename _highlight.css -> _highlight.scss for consistency.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -315,8 +315,9 @@ textarea {
 		display: block;
 		position: static;
 		top: auto;
-		margin: -1.33334em -1.33334em -1.33334em 1.33334em;
-		padding: 1.33334em;
+        /* disable margin and padding until pygments line number formatting is fixed */
+/* 		margin: -1.33334em -1.33334em -1.33334em 1.33334em; */
+/* 		padding: 1.33334em; */
 		overflow-x: auto;
 		font-size: 0.75em;
 		line-height: 2em;
